--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<p style="font-size: 40px;">
-  mangoes
-</p>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <style>
+            .defaultText {
+                text-align: center;
+                font-family: "Comic Sans MS";
+            }
+            .center-title {
+                text-align: center;
+                font-family: "Comic Sans MS";
+            }
+        </style>
+    </head>
+    <body>
+      <p class="center-title">Title</p>
+      <p> class="defaultText">Body Text</p>
+    </body>
+    </html>
