--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
             }
             .center-title {
                 text-align: center;
+                text-size: 70%;
                 font-family: "Comic Sans MS";
             }
         </style>
     </head>
     <body>
       <p class="center-title">Title</p>
-      <p> class="defaultText">Body Text</p>
+      <p class="defaultText">Body Text</p>
     </body>
     </html>
