--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <style>
             .defaultText {
                 text-align: center;
+                text-size: 10%;
                 font-family: "Comic Sans MS";
             }
             .center-title {
