--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <style>
             .defaultText {
                 text-align: center;
-                text-size: 18px;
+                font-size: 18px;
                 font-family: "Comic Sans MS";
             }
             .center-title {
                 text-align: center;
-                text-size: 64px;
+                font-size: 64px;
                 font-family: "Comic Sans MS";
             }
         </style>
