--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <style>
             .defaultText {
                 text-align: center;
-                font-size: 10%;
+                font-size: 40vh;
                 font-family: "Comic Sans MS";
             }
             .center-title {
                 text-align: center;
-                font-size: 50%;
+                font-size: 90vh;
                 font-family: "Comic Sans MS";
             }
         </style>
