--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-      <p class="center-title">Title</p>
+      <label class="center-title">Title</label>
       <p class="defaultText">Body Text</p>
     </body>
     </html>
