--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 font-family: "Comic Sans MS";
             }
             .center-title {
+                display: inline-block;
                 text-align: center;
                 font-size: 12vh;
                 font-family: "Comic Sans MS";
