--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
                 font-family: "Comic Sans MS";
             }
             .center-title {
-                display: inline-block;
                 text-align: center;
                 font-size: 12vh;
                 font-family: "Comic Sans MS";
@@ -16,7 +15,7 @@
         </style>
     </head>
     <body>
-      <label class="center-title">Title</label>
+      <h1 class="center-title">Title</h1>
       <p class="defaultText">Body Text</p>
     </body>
     </html>
