--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
     <html>
     <head>
         <style>
+            body {
+                background-color: #000000
+            }
             .defaultText {
-                text-align: center;
                 font-size: 2vh;
-                font-family: "Comic Sans MS";
+                font-family: "Source Code Pro";
+                margin: 5px;
             }
             .center-title {
                 text-align: center;
-                font-size: 12vh;
-                font-family: "Comic Sans MS";
+                font-size: 2vh;
+                font-family: "Source Code Pro";
+                margin: 5px;
             }
         </style>
     </head>
