--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
             }
             .defaultText {
                 font-size: 2vh;
+                color: #00ff00;
                 font-family: "Source Code Pro";
                 margin: 5px;
             }
             .center-title {
                 text-align: center;
                 font-size: 2vh;
+                color: #00ff00;
                 font-family: "Source Code Pro";
                 margin: 5px;
             }
