--- a/index.html
+++ b/index.html
@@ -8,20 +8,13 @@
             .defaultText {
                 font-size: 2vh;
                 color: #00ff00;
-                font-family: "Source Code Pro";
-                margin: 5px;
-            }
-            .center-title {
-                text-align: center;
-                font-size: 2vh;
-                color: #00ff00;
-                font-family: "Source Code Pro";
+                font-family: "Consolas";
                 margin: 5px;
             }
         </style>
     </head>
     <body>
-      <h1 class="center-title">Title</h1>
+      <p class="defaultText">Title</p>
       <p class="defaultText">Body Text</p>
     </body>
     </html>
