--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
                 color: #00ff00;
                 font-family: "Consolas";
                 margin: 5px;
+                text-shadow:
+                0 0 5px #00ff00,
+                0 0 10px #00ff00,
+                0 0 20px #00ff00;
             }
         </style>
     </head>
